# kanatrans-web

./: .gitignore  Cargo.toml  biome.json  package.json  tsconfig.json
.github/: dependabot.yml
.github/actions/set-up-wasi-sdk/: action.yml
.github/workflows/: bump.yml  cd.yml  ci.yml
api/: biome.json  package.json  tsconfig.json  wrangler.toml
api/src/: index.dev.ts  index.ts  wasm.d.ts  workers.ts
api/src/types/: output.ts  workers.ts
api/src/worker/: index.ts  response.ts  wasi.ts
view/: biome.json  package.json  tsconfig.cloudflare.json  tsconfig.json  tsconfig.node.json  vite.config.ts  worker-configuration.d.ts  wrangler.toml
view/app/: entry.server.tsx  layout.tsx  root.module.css  root.tsx  routes.ts
view/app/components/Header/: Header.module.css  index.tsx
view/app/components/WordInput/: WordInput.module.css  index.tsx
view/app/components/WordList/: History.tsx  Menu.tsx  WordCard.tsx  index.tsx
view/app/components/Workings/: Workings.module.css  index.tsx
view/app/hooks/: use-location-change.ts
view/app/routes/: home.tsx
view/app/routes/word/: _word.tsx  detail.tsx  home.tsx
view/app/types/: word.ts
view/workers/: app.ts
wasm/: Cargo.toml
wasm/benches/: bench.rs
wasm/src/: args.rs  error.rs  error_response.rs  main.rs  output.rs  rest.rs  router.rs  rpc.rs  service_response.rs
wasm/src/output/: tests.rs
wasm/src/rest/: tests.rs
wasm/src/router/: tests.rs
