[package]
name = "kanatrans-wasm"
version = "0.1.1"
edition = "2024"

[dependencies.adapter]
git = "https://github.com/hexium310/kanatrans"
tag = "kanatrans/0.2.6"
features = ["vendored"]

[dependencies.http]
version = "1.3.1"

[dependencies.http-body-util]
version = "0.1.3"

[dependencies.problem_details]
version = "0.8.0"

[dependencies.serde]
version = "1.0.219"

[dependencies.serde_json]
version = "1.0.142"

[dependencies.service]
git = "https://github.com/hexium310/kanatrans"
tag = "kanatrans/0.2.6"

[dependencies.tokio]
version = "1.45.1"
features = ["rt", "macros"]

[dependencies.tower]
version = "0.5.2"
features = ["util"]

[dev-dependencies.axum]
version = "0.8.4"
default-features = false
