[package]
name = "kanatrans-wasm"
version = "0.1.1"
edition = "2024"

[dependencies.adapter]
git = "https://github.com/hexium310/kanatrans"
tag = "kanatrans/0.2.6"
features = ["vendored"]

[dependencies.http]
version = "1.4.0"

[dependencies.http-body-util]
version = "0.1.3"

[dependencies.problem_details]
version = "0.8.0"

[dependencies.serde]
version = "1.0.228"

[dependencies.serde_json]
version = "1.0.148"

[dependencies.service]
git = "https://github.com/hexium310/kanatrans"
tag = "kanatrans/0.2.6"

[dependencies.tokio]
version = "1.48.0"
features = ["rt", "macros"]

[dependencies.tower]
version = "0.5.2"
features = ["util"]

[dev-dependencies.axum]
version = "0.8.8"
default-features = false
